<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Registration"
    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="personal details"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textColor="@color/txt"
        android:textStyle="bold"
        android:layout_marginTop="25dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/txt"
            android:id="@+id/firstName"
            android:textSize="20sp"
            />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/txt"
            android:id="@+id/lastName"
            android:textSize="20sp"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date of Birth"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="yy :" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/selectPrompt_year"
                android:id="@+id/spin_year"
                >
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mm :"
                android:textSize="20sp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spin_month"
                android:prompt="@string/selectPrompt_month"
                android:entries="@array/monthList"
                >
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dd :"
                android:textSize="20sp"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spin_day"
                android:prompt="@string/selectPrompt_day"
                >
            </Spinner>

        </LinearLayout>





    </LinearLayout>
    <TextView
        android:id="@+id/addressCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Address"
        android:textAllCaps="true"
        android:paddingLeft="20dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/countryList"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:entries="@array/countryList"
        android:prompt="@string/selectPrompt"
        android:spinnerMode="dialog"
        android:layoutMode="opticalBounds"
        android:scrollbars="vertical"
        >
    </Spinner>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="State"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/txt"
            android:id="@+id/address"
            android:textSize="20sp"
            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Street and blcok address"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/txt"
            android:id="@+id/homeAddress"
            android:textSize="20sp"
            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="@color/txt"
        android:id="@+id/phone"
        android:textSize="20sp"
        />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        />
    </LinearLayout>
</ScrollView>
</LinearLayout>